--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,35 @@
-button {
-	background-color: yellow;
-	color: black;
-	border: none;
+. {
+	margin: 0;
+        padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins',sans-serif;
+}
+
+body {
+	background: #1f242d;
+}
+
+.header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100px;
+	padding: 20px 10px;
+        background: transparent;
+	display: flex;
+	justify-content: 'space-between';
+	align-items: center;
+        z-index: 100;
+}
+
+.logo {
+	font-size : 25px;
+	color: #fff;
+	text-decoration: none;
+	font-weight: 600px;
+        cursor: default;
+}
+
+.navbar {
+        font-size: 18px;
 }
